--- a/.github/workflows/fei.yml
+++ b/.github/workflows/fei.yml
@@ -7,8 +7,8 @@ jobs:
   echo-hello:
     runs-on: ubuntu-latest
     steps:
-      - name: Make script executable
-        run: chmod +x test.sh
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Run the script
-        run: test.sh
+        run: ./test.sh
