--- a/.github/workflows/fei.yml
+++ b/.github/workflows/fei.yml
@@ -10,5 +10,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Make script executable
+        run: chmod +x ./test.sh
+
       - name: Run the script
         run: ./test.sh
+1
